@@ -1,3 +1,8 @@
+2009-10-12  Yu-Sung Su <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 0.01-26.
+    * R/jags: get rid of parameter n.sims
+
+
 2009-8-18  Yu-Sung Su <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 0.01-25.
     * add attach.jags and detach.jags functions.
